# nwws2mqtt

./: .coverage  .env.example  .gitignore  Dockerfile  Makefile  PUBSUB_REFACTORING.md  README.md  app.py  cap.txt  coverage.xml  docker-compose.monitoring.yml  docker.sh  geo-parquet.md  main.py  models.py  nwws_oi_ingest.py  output_handlers.py  pyproject.toml  pyrightconfig.json  test_mqtt.py  test_pubsub.py  xmpp_client.py
.github/: copilot-instructions.md
.github/workflows/: README.md  docker-ci.yml  docker-dev.yml  docker-publish.yml
.zed/: debug.json  tasks.json
app/: app.py
app/client/: xmpp.py
app/handlers/: base.py  console.py  manager.py  mqtt.py  registry.py
app/messaging/: __init__.py  message_bus.py  topics.py
app/models/: __init__.py  base.py  config.py  converters.py  product.py  ugc.py  vtec.py
app/receiver/: __init__.py  xmpp.py
app/stats/: __init__.py  collector.py  consumer.py  dashboard_ui.py  logger.py  prometheus.py  statistic_models.py  web_dashboard.py
app/utils/: __init__.py  conversion.py  logging_config.py
client/: xmpp.py
docker/: .dockerignore  Dockerfile  README.md  docker-compose.yml  healthcheck.py  mosquitto.conf  prometheus.yml
docs/: OUTPUTS.md  PIPELINE.md  TESTING.md  database_cleanup.md  database_output.md  metrics-architecture.md  metrics.md  mqtt_topic_structure.md  sparklines-phase1.md
docs/weather/: HLS Tropical Cyclone Products.md  Lakeshore Hazard Services.md  Multipurpose Weather Product Specificiation.md  Product List.md  Severe Weather Products.md  Text Product Formats and Codes.md  Tropical Cyclone Product Specification.md  VTEC.md  WFO Severe Product Specification.md  Water Products Specification.md
examples/: README.md  config_pipeline_example.py  mqtt_topic_examples.py  pipeline_config.yaml
grafana/provisioning/dashboards/: dashboards.yml
handlers/: __init__.py  console.py  manager.py  mqtt.py
models/: base.py  hvtec.py  vtec.py
scripts/: run_tests.sh
src/: __init__.py  app.py  nwws.sh
src/client/: xmpp.py
src/examples/: __init__.py  config_pipeline_example.py  metrics_endpoint.py  metrics_usage.py  simple_pipeline_example.py
src/filters/: test_msg_filter.py
src/handlers/: __init__.py  base.py  console.py  manager.py  mqtt.py  registry.py
src/messaging/: message_bus.py  topics.py
src/models/: __init__.py  base.py  config.py  converters.py  nwsli.py  output_config.py  product.py  xmpp_config.py
src/models/events/: __init__.py  noaa_port_event_data.py  text_product_event_data.py  weather_wire_event_data.py
src/models/weather/: __init__.py  hvtec.py  nwsli.py  product.py  wmo.py
src/nwws/: __init__.py  __main__.py  app.py
src/nwws/filters/: README.md  __init__.py  duplicate_filter.py  test_msg_filter.py
src/nwws/metrics/: README.md  __init__.py  api_server.py  collectors.py  exporters.py  registry.py  types.py
src/nwws/metrics/ui/: README.md  __init__.py  charts.py  dashboard.py  visualizations.py
src/nwws/models/: README.md  __init__.py  config.py  mqtt_config.py  xmpp_config.py
src/nwws/models/events/: __init__.py  noaa_port_event_data.py  text_product_event_data.py  (+1 more)
src/nwws/outputs/: README.md  __init__.py  console.py  database.py  mqtt.py
src/nwws/pipeline/: README.md  __init__.py  config.py  core.py  errors.py  filters.py  outputs.py  stats.py  transformers.py  types.py
src/nwws/receiver/: README.md  XMPP_EVENTS.md  __init__.py  config.py  stats.py  weather_wire.py
src/nwws/transformers/: README.md  __init__.py  noaa_port_transformer.py  xml_transformer.py
src/nwws/utils/: README.md  __init__.py  converters.py  geo_provider.py  geohash.py  logging_config.py  topic_builder.py  ugc_loader.py
src/nwws/webserver/: README.md  __init__.py  server.py
src/outputs/: __init__.py  console.py  mqtt.py
src/pipeline/: __init__.py  config.py  core.py  errors.py  examples.py  filters.py  outputs.py  transformers.py  types.py
src/receiver/: __init__.py  weather_wire.py
src/stats/: __init__.py  consumer.py  dashboard_ui.py  logger.py  prometheus.py  statistic_models.py
src/tests/: README.md  __init__.py  conftest.py  test_integration_transformers_filters.py
src/tests/filters/: __init__.py  test_duplicate_filter.py  test_test_msg_filter.py
src/tests/outputs/: test_console.py  test_database.py  test_init.py  test_mqtt.py  test_mqtt_topic_structure.py
src/tests/pipeline/: __init__.py  test_core.py  test_errors.py  test_transformers.py  test_types.py
src/tests/transformers/: __init__.py  test_noaa_port_transformer.py
src/tests/utils/: README.md  __init__.py  test_converters.py  test_logging_config.py
src/transformers/: __init__.py  noaa_port_transformer.py  noaaport_transformer.py
src/utils/: __init__.py  converters.py
stats/: __init__.py  collector.py  logger.py
tests/: __init__.py  conftest.py
tests/messaging/: test_message_bus.py  test_topics.py
tests/outputs/: __init__.py  test_console.py
tests/pipeline/: test_core.py  test_errors.py  test_types.py
tests/stats/: __init__.py  test_collector.py  test_consumer.py  test_logger.py  test_prometheus.py  test_statistic_models.py
typings/pubsub/: __init__.pyi  pub.pyi
typings/pubsub/core/: __init__.pyi  annotations.pyi  callables.pyi  listener.pyi  notificationmgr.pyi  publisher.pyi  topicargspec.pyi  topicdefnprovider.pyi  topicexc.pyi  topicmgr.pyi  topicobj.pyi  topictreetraverser.pyi  topicutils.pyi  weakmethod.pyi
typings/pubsub/utils/: __init__.pyi  exchandling.pyi  notification.pyi  topictreeprinter.pyi
typings/pygeohash/: __init__.pyi  bounding_box.pyi  distances.pyi  geohash.pyi  geohash_types.pyi  logging.pyi  neighbor.pyi  stats.pyi  types.pyi  viz.pyi
typings/pygeohash/cgeohash/: __init__.pyi  geohash_module.pyi
typings/pyiem/: __init__.pyi  database.pyi  exceptions.pyi  geom_util.pyi  network.pyi  observation.pyi  reference.pyi  util.pyi  wmo.pyi
typings/pyiem/models/: cwa.pyi  gairmet.pyi  pirep.pyi  sel.pyi  shef.pyi  taf.pyi  wwp.pyi
typings/pyiem/nws/: __init__.pyi  hvtec.pyi  lsr.pyi  nwsli.pyi  product.pyi  ugc.pyi  vtec.pyi
typings/pyiem/plot/: use_agg.pyi
(+55 files in other folders)
